--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-title: A.P
+title: Lihang Zhou
 baseurl: "/ap"
-url: "https://kssim.github.io"
+url: "https://wandererzlh.github.io"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
-  name: KyeongSeob Sim
+  name: Lihang Zhou (周立杭)
   desc: Hello nice to meet you
-  email: ksub0912@gmail.com
-  selfie: assets/img/profile.jpg
+  email: lzhou2@caltech.edu
+  selfie: assets/img/Lihang Zhou.jpg
 
 # social
 social:
@@ -19,11 +19,11 @@ social:
   dribbble:
   facebook: Test
   flickr:
-  github: kssim
+  github: WandererZlh
   google_plus:
   instagram:
   keybase:
-  linkedin: https://www.linkedin.com/in/kssim/ 
+  linkedin: Test
   pinterest:
   reddit:
   soundcloud:
