--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Lihang Zhou
-baseurl: "/WandererZlh.github.io"
+baseurl: ""
 url: "https://wandererzlh.github.io"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
